--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jakegoldm/doxygen-awesome-css",
+  "name": "@jakegoldm/doxygen-awesome-css",
   "version": "2.3.1",
   "description": "Custom CSS theme for doxygen html-documentation with lots of customization parameters.",
   "main": "",
